aggiunta cognome mittente
bella

--- a/prova.html
+++ b/prova.html
@@ -57,7 +57,7 @@
 <div class="messages" id="messagesContainer">
     <div class="message">
         <div class="message-title">Titolo Messaggio 4</div>
-        <div class="message-sender">Mittente: Mario</div>
+        <div class="message-sender">Mittente: endri hoxha</div>
         <div class="message-content">Contenuto del messaggio 1.</div>
         <div class="message-time">Orario: 10:00</div>
         <div class="message-buttons">
