--- a/prova.html
+++ b/prova.html
@@ -3,84 +3,214 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Messaggi</title>
+    <title>Messaggi - Tema The Sims</title>
     <style>
+        /* Base Styles */
+        :root {
+            --primary-color: #82d17c; /* Verde Sims */
+            --secondary-color: #5fa3ec; /* Azzurro Sims */
+            --background-color: #eaf7f5; /* Sfondo chiaro */
+            --border-color: #bfd9e6; /* Colore dei bordi */
+            --button-hover-color: #f9e26a; /* Giallo Sims per hover */
+            --font-color: #333; /* Testo principale */
+            --font-family: Arial, sans-serif;
+        }
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: var(--font-family);
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
-            height: 100vh;
+            min-height: 100vh;
+            background-color: var(--background-color);
+            color: var(--font-color);
         }
+
+        /* Header Styles */
         .header {
             display: flex;
             justify-content: space-between;
-            padding: 10px;
-            background-color: #f1f1f1;
+            align-items: center;
+            padding: 10px 20px;
+            background-color: var(--primary-color);
+            border-bottom: 2px solid var(--secondary-color);
         }
+
+        .button {
+            padding: 8px 15px;
+            background-color: var(--secondary-color);
+            border: none;
+            border-radius: 5px;
+            color: #fff;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .button:hover {
+            background-color: var(--button-hover-color);
+            color: #333;
+        }
+
+        /* Messages Section */
         .messages {
             flex: 1;
             overflow-y: auto;
-            padding: 10px;
-            border: 1px solid #ccc;
+            padding: 20px;
+            background-color: var(--background-color);
         }
+
         .message {
-            border: 1px solid #ddd;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 5px;
+            display: flex;
+            align-items: flex-start;
+            gap: 15px;
+            padding: 15px;
+            margin-bottom: 15px;
+            border: 2px solid var(--border-color);
+            border-radius: 8px;
+            background-color: #fff;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
-        .message-title {
+
+        .message:hover {
+            transform: scale(1.02);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+        }
+
+        .message-icon {
+            flex-shrink: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 60px;
+            height: 60px;
+            background-color: var(--primary-color);
+            border-radius: 50%;
+            font-size: 1.4em;
             font-weight: bold;
+            text-align: center;
+            color: #fff;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
+
+        .message-details {
+            flex: 1;
+        }
+
+        .message-title {
+            font-size: 1.2em;
+            font-weight: bold;
+            color: var(--secondary-color);
+            margin-bottom: 5px;
+        }
+
+        .message-meta {
+            font-size: 0.9em;
+            color: var(--font-color);
+        }
+
+        .message-content {
+            margin: 10px 0;
+            line-height: 1.5;
+        }
+
         .message-buttons {
+            display: flex;
+            gap: 10px;
             margin-top: 10px;
         }
-        .button {
+
+        .message-buttons .button {
             padding: 5px 10px;
-            margin-right: 5px;
-            cursor: pointer;
+            font-size: 0.9em;
         }
-        .hidden {
-            display: none;
+
+        /* Response Section */
+        .response {
+            margin-top: 15px;
+
+        }
+
+        .response textarea {
+            width: 99%;
+            height: 80px;
+            margin-bottom: 10px;
+            padding: 10px;
+            border: 2px solid var(--border-color);
+            border-radius: 5px;
+            resize: none;
+            background-color: #fdfdfd;
+        }
+
+        .response button {
+            background-color: var(--secondary-color);
+            color: #fff;
+            font-weight: bold;
+        }
+
+        .response button:hover {
+            background-color: var(--button-hover-color);
+            color: #333;
         }
     </style>
 </head>
 <body>
 
-<div class="header">
-    <button class="button" id="newMessageBtn">Nuovo Messaggio</button>
-    <button class="button" id="closeBtn">Chiudi</button>
-</div>
+<header class="header">
+    <button class="button" id="newMessageBtn" aria-label="Crea un nuovo messaggio">Nuovo Messaggio</button>
+    <button class="button" id="closeBtn" aria-label="Chiudi e torna indietro">Chiudi</button>
+</header>
 
-<div class="messages" id="messagesContainer">
-    <div class="message">
-        <div class="message-title">Titolo Messaggio 4</div>
-        <div class="message-sender">Mittente: endri hoxha</div>
-        <div class="message-content">Contenuto del messaggio 1.</div>
-        <div class="message-time">Orario: 10:00</div>
-        <div class="message-buttons">
-            <button class="button">Accetta</button>
-            <button class="button">Rifiuta</button>
+<main class="messages" id="messagesContainer" aria-live="polite">
+    <!-- Messaggio con richiesta di lavoro -->
+    <article class="message">
+        <div class="message-icon">EH</div>
+        <div class="message-details">
+            <h2 class="message-title">Sviluppo sito</h2>
+            <p class="message-meta"><strong>Mittente:</strong> Endri | <strong>Mestiere:</strong> Sviluppatore junior</p>
+            <p class="message-content">Richiesta di lavoro: Sviluppo messaggi.</p>
+            <div class="message-buttons">
+                <button class="button">Accetta</button>
+                <button class="button">Rifiuta</button>
+            </div>
         </div>
-    </div>
-    <div class="message">
-        <div class="message-title">Titolo Messaggio 2</div>
-        <div class="message-sender">Mittente: Luca</div>
-        <div class="message-content">Contenuto del messaggio 2.</div>
-        <div class="message-time">Orario: 10:05</div>
-    </div>
-    <!-- Aggiungi altri messaggi qui -->
-</div>
+    </article>
+
+    <!-- Messaggio informativo -->
+    <article class="message">
+        <div class="message-icon">LZ</div>
+        <div class="message-details">
+            <h2 class="message-title">Commit del lavoro</h2>
+            <p class="message-meta"><strong>Mittente:</strong> Luigi | <strong>Mestiere:</strong> Fortnite noob player</p>
+            <p class="message-content">Messaggio informativo: Preparazione codice.</p>
+        </div>
+    </article>
+
+    <!-- Conversazione personale -->
+    <article class="message">
+        <div class="message-icon">MT</div>
+        <div class="message-details">
+            <h2 class="message-title">Conversazione con Martin</h2>
+            <p class="message-meta"><strong>Mittente:</strong> Martin | <strong>Mestiere:</strong> Generale</p>
+            <p class="message-content">Ciao, volevo aggiornamenti sul progetto.</p>
+            <div class="response">
+                <textarea placeholder="Scrivi una risposta..."></textarea>
+                <button class="button">Invia</button>
+            </div>
+        </div>
+    </article>
+</main>
 
 <script>
-    document.getElementById('closeBtn').addEventListener('click', function() {
+    // Event listeners for buttons
+    document.getElementById('closeBtn').addEventListener('click', function () {
         alert('Tornando al villaggio...');
         // Logica per tornare al villaggio
     });
 
-    document.getElementById('newMessageBtn').addEventListener('click', function() {
+    document.getElementById('newMessageBtn').addEventListener('click', function () {
         alert('Mostrando l\'elenco degli utenti...');
         // Logica per mostrare l'elenco degli utenti
     });
