--- a/prova.html
+++ b/prova.html
@@ -1,220 +1,301 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Messaggi - Tema The Sims</title>
     <style>
-        /* Base Styles */
-        :root {
-            --primary-color: #82d17c; /* Verde Sims */
-            --secondary-color: #5fa3ec; /* Azzurro Sims */
-            --background-color: #eaf7f5; /* Sfondo chiaro */
-            --border-color: #bfd9e6; /* Colore dei bordi */
-            --button-hover-color: #f9e26a; /* Giallo Sims per hover */
-            --font-color: #333; /* Testo principale */
-            --font-family: Arial, sans-serif;
-        }
+      :root {
+        --primary-color: #82d17c; /* Verde Sims */
+        --secondary-color: #5fa3ec; /* Azzurro Sims */
+        --background-color: #eaf7f5; /* Sfondo chiaro */
+        --font-color: #333; /* Testo principale */
+        --button-hover-color: #f9e26a; /* Giallo Sims per hover */
+      }
 
-        body {
-            font-family: var(--font-family);
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            background-color: var(--background-color);
-            color: var(--font-color);
-        }
+      body {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-start;
+        height: 100vh;
+        background-color: var(--background-color);
+        font-family: Arial, sans-serif;
+        color: var(--font-color);
+      }
 
-        /* Header Styles */
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            background-color: var(--primary-color);
-            border-bottom: 2px solid var(--secondary-color);
-        }
+      .toggle-button {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 60px;
+        height: 60px;
+        background-color: var(--primary-color);
+        border: none;
+        border-radius: 50%;
+        cursor: pointer;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        transition: background-color 0.3s ease, transform 0.2s ease;
+        z-index: 1000;
+      }
 
-        .button {
-            padding: 8px 15px;
-            background-color: var(--secondary-color);
-            border: none;
-            border-radius: 5px;
-            color: #fff;
-            font-weight: bold;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
+      .toggle-button:hover {
+        background-color: var(--button-hover-color);
+        transform: scale(1.1);
+      }
 
-        .button:hover {
-            background-color: var(--button-hover-color);
-            color: #333;
-        }
+      .toggle-button i {
+        font-size: 1.5em;
+        color: #fff;
+      }
 
-        /* Messages Section */
-        .messages {
-            flex: 1;
-            overflow-y: auto;
-            padding: 20px;
-            background-color: var(--background-color);
-        }
+      .messages {
+        position: fixed;
+        top: 20px;
+        right: 100px;
+        width: 300px;
+        max-height: calc(100vh - 40px);
+        background-color: #fff;
+        border: 2px solid var(--secondary-color);
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        overflow-y: auto;
+        padding: 15px;
+        transition: opacity 0.3s ease, visibility 0.3s ease;
+        opacity: 0;
+        visibility: hidden;
+      }
 
-        .message {
-            display: flex;
-            align-items: flex-start;
-            gap: 15px;
-            padding: 15px;
-            margin-bottom: 15px;
-            border: 2px solid var(--border-color);
-            border-radius: 8px;
-            background-color: #fff;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-        }
+      .messages.open {
+        opacity: 1;
+        visibility: visible;
+      }
 
-        .message:hover {
-            transform: scale(1.02);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-        }
+      .message {
+        padding: 10px;
+        margin-bottom: 10px;
+        border: 1px solid var(--primary-color);
+        border-radius: 5px;
+        background-color: var(--background-color);
+      }
 
-        .message-icon {
-            flex-shrink: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 60px;
-            height: 60px;
-            background-color: var(--primary-color);
-            border-radius: 50%;
-            font-size: 1.4em;
-            font-weight: bold;
-            text-align: center;
-            color: #fff;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
+      .message h2 {
+        font-size: 1.1em;
+        color: var(--secondary-color);
+        margin: 0 0 5px;
+      }
 
-        .message-details {
-            flex: 1;
-        }
+      .message p {
+        margin: 5px 0;
+      }
 
-        .message-title {
-            font-size: 1.2em;
-            font-weight: bold;
-            color: var(--secondary-color);
-            margin-bottom: 5px;
-        }
+      .buttons {
+        display: flex;
+        gap: 10px;
+        margin-top: 10px;
+      }
 
-        .message-meta {
-            font-size: 0.9em;
-            color: var(--font-color);
-        }
+      .response {
+        margin-top: 10px;
+      }
 
-        .message-content {
-            margin: 10px 0;
-            line-height: 1.5;
-        }
+      .response textarea {
+        width: 90%;
+        padding: 5px;
+        border: 1px solid var(--secondary-color);
+        border-radius: 5px;
+        resize: none;
+      }
 
-        .message-buttons {
-            display: flex;
-            gap: 10px;
-            margin-top: 10px;
-        }
+      .response button {
+        margin-top: 5px;
+        padding: 5px 10px;
+        background-color: var(--primary-color);
+        border: none;
+        border-radius: 5px;
+        color: #fff;
+        cursor: pointer;
+      }
 
-        .message-buttons .button {
-            padding: 5px 10px;
-            font-size: 0.9em;
-        }
+      .response button:hover {
+        background-color: var(--button-hover-color);
+        color: #333;
+      }
 
-        /* Response Section */
-        .response {
-            margin-top: 15px;
+      .add-message-btn {
+        margin-top: 10px;
+        padding: 10px;
+        background-color: var(--secondary-color);
+        border: none;
+        border-radius: 5px;
+        color: #fff;
+        cursor: pointer;
+        display: none; /* inizialmente nascosto */
+      }
 
-        }
+      .add-message-btn:hover {
+        background-color: var(--button-hover-color);
+      }
 
-        .response textarea {
-            width: 99%;
-            height: 80px;
-            margin-bottom: 10px;
-            padding: 10px;
-            border: 2px solid var(--border-color);
-            border-radius: 5px;
-            resize: none;
-            background-color: #fdfdfd;
-        }
+      .delete-button {
+        margin-left: 10px;
+        padding: 5px 10px;
+        background-color: #ff5c5c;
+        border: none;
+        border-radius: 5px;
+        color: #fff;
+        cursor: pointer;
+      }
 
-        .response button {
-            background-color: var(--secondary-color);
-            color: #fff;
-            font-weight: bold;
-        }
+      .delete-button:hover {
+        background-color: #ff2a2a;
+      }
 
-        .response button:hover {
-            background-color: var(--button-hover-color);
-            color: #333;
-        }
+      /* Modale per aggiungere nuovi messaggi */
+      .modal {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        justify-content: center;
+        align-items: center;
+        z-index: 1001;
+      }
+
+      .modal-content {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 5px;
+        max-width: 400px;
+        width: 100%;
+      }
+
+      .modal input,
+      .modal textarea,
+      .modal select {
+        width: 100%;
+        margin-bottom: 10px;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid var(--secondary-color);
+      }
+
+      .modal button {
+        padding: 10px;
+        background-color: var(--primary-color);
+        border: none;
+        border-radius: 5px;
+        color: #fff;
+        cursor: pointer;
+      }
+
+      .modal button:hover {
+        background-color: var(--button-hover-color);
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
+    <button class="toggle-button" id="toggleMessagesBtn" aria-label="Mostra messaggi">
+      <i>💬</i>
+    </button>
+    <button class="add-message-btn" id="addMessageBtn">+</button>
 
-<header class="header">
-    <button class="button" id="newMessageBtn" aria-label="Crea un nuovo messaggio">Nuovo Messaggio</button>
-    <button class="button" id="closeBtn" aria-label="Chiudi e torna indietro">Chiudi</button>
-</header>
-
-<main class="messages" id="messagesContainer" aria-live="polite">
-    <!-- Messaggio con richiesta di lavoro -->
-    <article class="message">
-        <div class="message-icon">EH</div>
-        <div class="message-details">
-            <h2 class="message-title">Sviluppo sito</h2>
-            <p class="message-meta"><strong>Mittente:</strong> Endri | <strong>Mestiere:</strong> Sviluppatore junior</p>
-            <p class="message-content">Richiesta di lavoro: Sviluppo messaggi.</p>
-            <div class="message-buttons">
-                <button class="button">Accetta</button>
-                <button class="button">Rifiuta</button>
-            </div>
+    <div class="messages" id="messagesContainer">
+      <div class="message">
+        <h2>Messaggio Info</h2>
+        <p><strong>Mittente:</strong> User1</p>
+        <p>Questo è un messaggio informativo.</p>
+      </div>
+      <div class="message">
+        <h2>Richiesta di lavoro</h2>
+        <p><strong>Mittente:</strong> User2</p>
+        <p>Richiesta di accettazione o rifiuto.</p>
+        <div class="buttons">
+          <button>Accetta</button>
+          <button>Rifiuta</button>
         </div>
-    </article>
+      </div>
+    </div>
 
-    <!-- Messaggio informativo -->
-    <article class="message">
-        <div class="message-icon">LZ</div>
-        <div class="message-details">
-            <h2 class="message-title">Commit del lavoro</h2>
-            <p class="message-meta"><strong>Mittente:</strong> Luigi | <strong>Mestiere:</strong> Fortnite noob player</p>
-            <p class="message-content">Messaggio informativo: Preparazione codice.</p>
-        </div>
-    </article>
+    <div class="modal" id="messageModal">
+      <div class="modal-content">
+        <h2>Nuovo Messaggio</h2>
+        <label for="messageType">Tipo di Messaggio:</label>
+        <select id="messageType">
+          <option value="info">Messaggio Info</option>
+          <option value="work">Messaggio di Lavoro</option>
+        </select>
+        <label for="recipient">Destinatario:</label>
+        <select id="recipient">
+          <option value="User1">User1</option>
+          <option value="User2">User2</option>
+          <option value="User3">User3</option>
+          <option value="User4">User4</option>
+        </select>
+        <label for="messageContent">Messaggio:</label>
+        <textarea id="messageContent" placeholder="Scrivi il tuo messaggio..."></textarea>
+        <button onclick="sendMessage()">Invia</button>
+        <button onclick="closeModal()">Annulla</button>
+      </div>
+    </div>
 
-    <!-- Conversazione personale -->
-    <article class="message">
-        <div class="message-icon">MT</div>
-        <div class="message-details">
-            <h2 class="message-title">Conversazione con Martin</h2>
-            <p class="message-meta"><strong>Mittente:</strong> Martin | <strong>Mestiere:</strong> Generale</p>
-            <p class="message-content">Ciao, volevo aggiornamenti sul progetto.</p>
-            <div class="response">
-                <textarea placeholder="Scrivi una risposta..."></textarea>
-                <button class="button">Invia</button>
-            </div>
-        </div>
-    </article>
-</main>
+    <script>
+      const toggleButton = document.getElementById("toggleMessagesBtn");
+      const messagesContainer = document.getElementById("messagesContainer");
+      const addMessageButton = document.getElementById("addMessageBtn");
+      const messageModal = document.getElementById("messageModal");
 
-<script>
-    // Event listeners for buttons
-    document.getElementById('closeBtn').addEventListener('click', function () {
-        alert('Tornando al villaggio...');
-        // Logica per tornare al villaggio
-    });
+      toggleButton.addEventListener("click", () => {
+        messagesContainer.classList.toggle("open");
+        addMessageButton.style.display = addMessageButton.style.display === "block" ? "none" : "block";
+      });
 
-    document.getElementById('newMessageBtn').addEventListener('click', function () {
-        alert('Mostrando l\'elenco degli utenti...');
-        // Logica per mostrare l'elenco degli utenti
-    });
-</script>
+      addMessageButton.addEventListener("click", () => {
+        messageModal.style.display = "flex";
+      });
 
-</body>
+      function closeModal() {
+        messageModal.style.display = "none";
+      }
+
+      function sendMessage() {
+        const messageType = document.getElementById("messageType").value;
+        const recipient = document.getElementById("recipient").value;
+        const content = document.getElementById("messageContent").value;
+
+        if (recipient && content) {
+          const newMessageSection = document.createElement("div");
+          newMessageSection.classList.add("message");
+
+          if (messageType === "info") {
+            newMessageSection.innerHTML = `
+              <h2>Messaggio Info</h2>
+              <p><strong>Mittente:</strong> ${recipient}</p>
+              <p>${content}</p>
+            `;
+          } else if (messageType === "work") {
+            newMessageSection.innerHTML = `
+              <h2>Richiesta di lavoro</h2>
+              <p><strong>Mittente:</strong> ${recipient}</p>
+              <p>${content}</p>
+              <div class="buttons">
+                <button>Accetta</button>
+                <button>Rifiuta</button>
+              </div>
+            `;
+          }
+
+          messagesContainer.appendChild(newMessageSection);
+        }
+
+        closeModal();
+      }
+    </script>
+  </body>
 </html>
